# LowRankFactMDD

./: README.md  environment.yml  install_env.sh  pyproject.toml
data/: README.md
examples/Overthrust2D/: mdd_X2QQt_bt_warm_init_run.sh  mdd_fx_X2QQt_bt_warm_init.py
examples/SeamSubsalt/: mdd_X2QQt_bt_run.sh  mdd_fx_X2LR_bt.py  mdd_fx_X2QQt_bt.py
examples/Volve/: mdd_X2QQt_bt_warm_init_run.sh  mdd_fx_X2QQt_bt_warm_init.py
mdd_lrr/: mdd_lrr.py  utils.py
notebooks/: Overthrust2d-sparseShots.ipynb  Overthrust2d.ipynb  SeamSubsalt-sparseShots.ipynb  SeamSubsalt.ipynb  Volve.ipynb  mdd_lrr_toy.ipynb
src/: ipalm.py  mdd_utils.py
