[build-system]
requires = [ 
    "setuptools >= 65",
    "setuptools_scm[toml]",
    "wheel",
]

[project]
name = "mdd_lrr"
authors = [ 
    {name = "Fuqiang Chen", email = "fuqiang.chen@kaust.edu.sa"},
]
description = "proximal alternating linearized minimization algorithm to solve MDD with factorization-based low-rank regularization."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["multidimensional deconvolution", "Low-rank regularization", "seismic"]
license = {text = "BSD 3-Clause License"}
classifiers = [ 
        "Intended Audience :: Science/Research",
        "Natural Language :: English",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Topic :: Scientific/Engineering :: Mathematics",
    ]   
dependencies = [ 
        "numpy >= 1.15.0",
        "pylops >= 2.0.0",
        "pyproximal >= 0.7.0",
    ]   
dynamic = ["version"]

[tool.setuptools.packages]
find = {}
